--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <link rel="stylesheet" href="style.css">
+   <h2>Navegadores web</h2>
+</head>
+<body>
+    <hr>
+    <p id="def"> Un navegador web (in inglés, web browser)es un sogrware, aplicación o programa que  permite el acceso a la Web, interpretando la informacion de distintos tipos de archivos y sitios web para que estos puedan
+        ser vistos.
+    </p>
+    <hr>
+    <p style="color: green;"> La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
+    <h4>Ejemplos de navegadors web</h4>
+    <p class="navegador">Safari:safari es un navegador web de código cerrado desarrollado por apple inc. Está disponible para macOS e iOS. </p>
+    <p class="navegador">Mozilla Firefox es un navegador web libre y se código abierto desarrollado para Linux, Android, iOS, macOS y Microsogr Windows coordinado por la fundación Mozilla.</p>
+    <p class="navegador">Googlechrome es un navegador web de código cerrado desarrollado por google, aunque derivado de proyectos de código abierto</p>
+</body>
+</html>
